fabric/testdata/out/ing_sugarcane-get-api-commodity-groups-rl-all.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-filter":"inlineContentIfStatus(429,
      \"{\\\"title\\\": \\\"Rate limit exceeded\\\", \\\"detail\\\": \\\"See the retry-after
      header for how many seconds to wait before retrying.\\\", \\\"status\\\": 429}\",
      \"application/problem+json\") -\u003e oauthTokeninfoAnyKV(\"realm\", \"/services\",
      \"realm\", \"/employees\") -\u003e unverifiedAuditLog(\"sub\") -\u003e oauthTokeninfoAllScope(\"uid\",
      \"sugarcane.read\") -\u003e clusterClientRatelimit(\"sugarcane_api-commodity-groups_GET\",
      120, \"1m\", \"Authorization\") -\u003e flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\",
      \"uid\", \"scope\", \"realm\")","zalando.org/skipper-predicate":"Weight(3) \u0026\u0026
      Path(\"/api/commodity-groups\") \u0026\u0026 Method(\"GET\") \u0026\u0026 Header(\"X-Forwarded-Proto\",
      \"https\")"},"labels":{"controller-uid":"034b420d-673b-11e9-8daa-02b5f12a6be8","deployment-id":"d-ccbr8yx3m7q8jqmamix8fuc5m","pipeline-id":"l-6yn1sv8ryxtz4pzezhuwwcjc8"},"name":"sugarcane-get-api-commodity-groups-rl-all","namespace":"default"},"spec":{"rules":[{"host":"sugarcane.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"sugarcane","servicePort":"http"},"pathType":"ImplementationSpecific"}]}},{"host":"spp-commodity-group-data-test.zalandoapis.com","ht [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-filter: 'inlineContentIfStatus(429, "{\"title\": \"Rate limit
      exceeded\", \"detail\": \"See the retry-after header for how many seconds to
      wait before retrying.\", \"status\": 429}", "application/problem+json") -> oauthTokeninfoAnyKV("realm",
      "/services", "realm", "/employees") -> unverifiedAuditLog("sub") -> oauthTokeninfoAllScope("uid",
      "sugarcane.read") -> clusterClientRatelimit("sugarcane_api-commodity-groups_GET",
      120, "1m", "Authorization") -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward",
      "uid", "scope", "realm")'
    zalando.org/skipper-predicate: Weight(3) && Path("/api/commodity-groups") && Method("GET")
      && Header("X-Forwarded-Proto", "https")
  creationTimestamp: "2019-07-03T13:24:42Z"
  generation: 1
  labels:
    controller-uid: 034b420d-673b-11e9-8daa-02b5f12a6be8
    deployment-id: d-ccbr8yx3m7q8jqmamix8fuc5m
    pipeline-id: l-6yn1sv8ryxtz4pzezhuwwcjc8
  name: sugarcane-get-api-commodity-groups-rl-all
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: sugarcane
    uid: 034b420d-673b-11e9-8daa-02b5f12a6be8
  resourceVersion: "1370351711"
  uid: eaf31239-9d95-11e9-a6d3-0a8c002a9ae8
spec:
  rules:
  - host: sugarcane.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: sugarcane
            port:
              name: http
        pathType: ImplementationSpecific
  - host: spp-commodity-group-data-test.zalandoapis.com
    http:
      paths:
      - backend:
          service:
            name: sugarcane
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
